# scaler

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  manual-release-tag.yml  release.yml
docs/superpowers/plans/: 2026-04-02-scaler-v1.md  2026-04-07-platform-backend-wiring.md
docs/superpowers/specs/: 2026-04-02-scaler-v1-design.md
scripts/: bump-version.sh
src/: lib.rs  main.rs
src/backend/: linux_systemd.rs  macos_taskpolicy.rs  mod.rs
src/cli/: args.rs  mod.rs  status.rs  values.rs
src/core/: mod.rs  output.rs  run_loop.rs  sampling.rs  summary.rs  system_cpu.rs  system_memory.rs  types.rs
src/detach/: id.rs  linux.rs  macos.rs  mod.rs  state.rs
src/ui/: mod.rs  plain.rs  tui.rs
tests/: backend_contracts.rs  backend_linux.rs  backend_macos.rs  cli_parse.rs  core_contracts.rs  detach_cli_e2e.rs  detach_cli_parse.rs  detach_id.rs  detach_linux_argv.rs  detach_linux_finalize.rs  detach_linux_query.rs  detach_macos_e2e.rs  detach_state.rs  detach_status_render.rs  doctor_cli.rs  run_loop.rs  signal_handling.rs  summary_render.rs  version_cli.rs
