[package]
name = "scaler"
version = "1.1.1"
edition = "2024"
license = "MIT"
description = "Wrap a command with CPU and memory limits — real cgroup v2 on Linux, best-effort on macOS."
repository = "https://github.com/reedchan7/scaler"
readme = "README.md"
keywords = ["cgroup", "systemd", "cpu-limit", "memory-limit", "cli"]
categories = ["command-line-utilities", "os"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ctrlc = "3"
libc = "0.2.184"
ratatui = "0.29"
rust_decimal = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
